--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,15 +20,15 @@
   height: 100%;
   width: var(--sidebar-width);
   @apply bg-gray-900 text-white overflow-y-auto fixed left-0 top-0 shadow-2xl;
-  @apply transition-all duration-200 ease-in-out;
+  @apply transition-all duration-200 ease-in-out z-10;
 }
 
 #sidebar::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 
 #sidebar::-webkit-scrollbar-thumb {
-  width: 10px;
+  width: 8px;
   @apply rounded-lg bg-gray-100 bg-opacity-25;
 }
 
@@ -37,7 +37,7 @@
 }
 
 #topnav {
-  @apply shadow bg-white h-14 flex justify-between items-center p-2;
+  @apply shadow-sm bg-white h-14 flex justify-between items-center p-2;
 }
 
 .icon-button {
@@ -64,6 +64,10 @@
   @apply flex items-center mb-1;
 }
 
+.sidebar-link.active {
+  @apply bg-gray-800;
+}
+
 .sidebar-menu .sidebar-item .sub-sidebar-menu {
   @apply hidden;
 }
@@ -73,7 +77,7 @@
 }
 
 .sidebar-menu .sidebar-item .sub-sidebar-menu .sidebar-item {
-  @apply pl-4;
+  @apply pl-5;
 }
 
 .dropdown-content {
@@ -88,6 +92,16 @@
   @apply bg-white rounded-md border border-gray-100;
 }
 
+.dropdown-content,
+.dropdown-content-right {
+  @apply hidden;
+}
+
+.dropdown-content.show,
+.dropdown-content-right.show {
+  @apply block;
+}
+
 .dropdown-button {
   @apply p-2 px-3 rounded flex flex-row justify-center items-center gap-x-2;
   @apply hover:bg-gray-50 transition-all duration-200 ease-in-out;
@@ -96,6 +110,18 @@
 .button {
   @apply p-2 px-3 rounded block w-full transition-all duration-200 ease-in-out gap-x-2;
   @apply border border-gray-100 hover:bg-gray-50 flex items-center justify-center;
+}
+
+.button-danger {
+  @apply bg-red-500 text-white hover:bg-red-500 hover:bg-opacity-75;
+}
+
+.breadcrumb {
+  @apply flex;
+}
+
+.breadcrumb-item {
+  @apply flex items-center;
 }
 
 /* Smartphone */
